Add missing endpoints
create update/delete endpoints and tests
